--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -1006,28 +1006,45 @@ main {
 }
 
 .post {
+  position:relative;
   text-align: left;
   &__header {
+     &:after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    bottom: 0;
+    -webkit-transform: skewY(-1deg);
+    -ms-transform: skewY(-1deg);
+    transform: skewY(-1deg);
+    -webkit-transform-origin: 100% 100%;
+    -ms-transform-origin: 100% 100%;
+    transform-origin: 100% 100%;
+    overflow: visible;
+    width: 100%;
+    height: 100%;
+    background: $color__background-body;
+  }
   }
   &__title {
-       margin: 0 0 23px 0;
+    margin: 0 0 23px 0;
     font-size: 3.75rem;
     font-weight: 300;
     line-height: 4rem;
     letter-spacing: -1.3px;
   }
   &__short-description {
-       margin: 0 0 28px 0;
+    margin: 0 0 28px 0;
     max-width: 75%;
     font-size: 1.25rem;
     letter-spacing: 0.2px;
-
   }
 
   &__header-menu {
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    // justify-content: space-between;
     display: flex;
   }
 
@@ -1064,7 +1081,12 @@ main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
- 
+  }
+
+  &__locations {
+    flex-wrap: wrap;
+    margin-left: 60px;
+    width: 200px;
   }
 
   &__location {
@@ -1074,20 +1096,20 @@ main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    font-size: 1rem;
-    line-height: 1.6;
+    font-size: 1.125rem;
+    line-height: 1.2;
     color: $color-number-light-grey;
     &:last-of-type i {
       display: none;
     }
   }
+  &__tags {
+    
+  }
   &__tag {
     svg {
-
-
       width: 36px;
       height: 35px;
-
     }
     &:not(:last-of-type) {
       svg {
@@ -1098,6 +1120,13 @@ main {
       display: none;
     }
   }
+  &__company-logo {
+    margin-left: auto;
+    max-width: 120px;
+    max-height: 60px;
+  }
+
+ 
 }
 
 @media only screen and (max-width: 1024px) {
