Fix header post padding bottom

--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -1009,6 +1009,7 @@ main {
   position:relative;
   text-align: left;
   &__header {
+    padding-bottom: 80px;
      &:after {
     content: "";
     position: absolute;
