Job post content part

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -39,3 +39,4 @@ $icon-background:#787572;
 $color-header-border: #8b8886;
 $color-white:#ffffff;
 $contact-us-btn-border:#df97ab;
+$list-circle-marker:rgba(224, 98, 135,.8);
