--- a/style.css
+++ b/style.css
@@ -2461,11 +2461,12 @@ main {
 }
 
 .post {
-	position: relative;
 	text-align: left;
 }
 
 .post__header {
+	position: relative;
+	z-index: 1;
 	padding-bottom: 85px;
 }
 
@@ -2582,6 +2583,57 @@ main {
 	margin-left: auto;
 	max-width: 120px;
 	max-height: 60px;
+}
+
+.post__content {
+	padding-top: 120px;
+	background-color: #fff;
+}
+
+.post__secondary-description {
+	max-width: 85%;
+	margin: 0 0 35px 0;
+	font-size: 1.25rem;
+	line-height: 30px;
+	letter-spacing: 0.2px;
+}
+
+.post__advantages {
+	margin-bottom: 35px;
+}
+
+.post__advantages:last-of-type {
+	margin-bottom: 110px;
+}
+
+.post__advantages-title {
+	margin: 0 0 16px 0;
+	font-size: 2.1875rem;
+	font-weight: 300;
+	line-height: 45px;
+	letter-spacing: -0.5px;
+}
+
+.post__advantage {
+	position: relative;
+	margin-left: 20px;
+	color: #3d393599;
+	font-size: 1.0625rem;
+	line-height: 25px;
+	letter-spacing: .2px;
+}
+
+.post__advantage:before {
+	content: "";
+	position: absolute;
+	top: 11px;
+	left: -2%;
+	transform: translate(-50%, -50%);
+	display: inline-block;
+	border: 1px solid rgba(224, 98, 135, 0.8);
+	border-radius: 50%;
+	width: 7px;
+	height: 7px;
 }
 
 @media only screen and (max-width: 1024px) {
