--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -26,7 +26,7 @@
   max-width: 1170px;
   width: 95%;
   margin: 0 auto;
-  &--onlypost {
+  &--job {
     max-width: 770px;
   }
 }
@@ -149,25 +149,6 @@ main {
   &__input {
     width: 100%;
     height: 100%;
-    // &-wrap {
-    //   position: relative;
-    //   -ms-flex-preferred-size: 58%;
-    //   flex-basis: 58%;
-    //   max-width: 58%;
-    //   height: 100%;
-
-    //   &:before {
-    //     content: "";
-    //     position: absolute;
-    //     left: 4.7%;
-    //     top: 30%;
-    //     width: 30px;
-    //     height: 30px;
-    //     background-image: url(assets/image/-e-search.svg);
-    //     background-repeat: no-repeat;
-    //     background-size: contain;
-    //   }
-    // }
     &[type="text"] {
       padding: 18.5px 65px;
       &::-webkit-input-placeholder {
@@ -1005,7 +986,7 @@ main {
   display: none;
 }
 
-.post {
+.job {
 
   text-align: left;
   &__header {
@@ -1138,25 +1119,25 @@ main {
     line-height: 30px;
     letter-spacing: 0.2px;
   }
-  &__advantages {
-    margin-bottom: 35px;
-    &:last-of-type {
-      margin-bottom: 110px;
-    }
-    &-title {
+  &__title {
       margin: 0 0 16px 0;
       font-size: 2.1875rem;
       font-weight: 300;
       line-height: 45px;
       letter-spacing: -0.5px;
     }
+  &__advantages {
+    margin-bottom: 35px;
+    &:last-of-type {
+      margin-bottom: 110px;
+    }
+    
     &-list {
     }
   }
   &__advantage {
     position: relative;
     margin-left: 20px;
-    color: $color-number-light-grey;
     font-size: 1.0625rem;
     line-height: 25px;
     letter-spacing: .2px;
@@ -1173,7 +1154,41 @@ main {
       height: 7px;
     }
   }
+
 }
+
+  .benefits {
+    padding:100px 0 110px;
+         background: $color__background-body;
+         h2 {
+           margin-bottom: 60px;
+         }
+    &__grid {
+          grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-gap: 50px;
+    display: grid;
+    }
+  }
+  .benefit {
+    position: relative;
+    display: flex;
+    span{
+      padding-left: 70px;
+    font-size: 1.0625rem;
+    line-height: 25px;
+    }
+    svg {
+          position: absolute;
+    top: 50%;
+    left: 8%;
+    transform: translate(-50%, -50%);
+    max-width: 60px;
+    max-height: 50px;
+    }
+    
+
+  }
 
 @media only screen and (max-width: 1024px) {
   .filter__item-tags:not(.filter__item-location-tags) {
