--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -987,7 +987,6 @@ main {
 }
 
 .job {
-
   text-align: left;
   &__header {
     position: relative;
@@ -1012,11 +1011,32 @@ main {
     }
   }
   &__title {
-    margin: 0 0 23px 0;
-    font-size: 3.75rem;
+    margin: 0 0 15px 0;
+    font-size: 2.1875rem;
     font-weight: 300;
-    line-height: 4rem;
-    letter-spacing: -1.3px;
+    line-height: 45px;
+    letter-spacing: -0.5px;
+    &--head {
+      margin: 0 0 23px 0;
+      font-size: 3.75rem;
+      font-weight: 300;
+      line-height: 4rem;
+      letter-spacing: -1.3px;
+    }
+    &--form {
+      margin: 0 0 62px 0;
+      font-size: 2.8125rem;
+      font-weight: 300;
+      line-height: 55px;
+      letter-spacing: -1px;
+    }
+    &--socials {
+      font-size: 2.1875rem;
+    font-weight: 300;
+    line-height: 45px;
+      letter-spacing: -1px;
+
+    }
   }
   &__short-description {
     margin: 0 0 28px 0;
@@ -1109,7 +1129,7 @@ main {
     max-height: 60px;
   }
   &__content {
-    padding-top: 120px;
+    padding: 120px 0 105px;
     background-color: $color-white-text;
   }
   &__secondary-description {
@@ -1119,19 +1139,12 @@ main {
     line-height: 30px;
     letter-spacing: 0.2px;
   }
-  &__title {
-      margin: 0 0 16px 0;
-      font-size: 2.1875rem;
-      font-weight: 300;
-      line-height: 45px;
-      letter-spacing: -0.5px;
-    }
   &__advantages {
     margin-bottom: 35px;
     &:last-of-type {
-      margin-bottom: 110px;
+      margin: 0;
     }
-    
+
     &-list {
     }
   }
@@ -1140,7 +1153,7 @@ main {
     margin-left: 20px;
     font-size: 1.0625rem;
     line-height: 25px;
-    letter-spacing: .2px;
+    letter-spacing: 0.2px;
     &:before {
       content: "";
       position: absolute;
@@ -1154,42 +1167,292 @@ main {
       height: 7px;
     }
   }
-
 }
 
-  .benefits {
-    padding:100px 0 110px;
-         background: $color__background-body;
-         h2 {
-           margin-bottom: 60px;
-         }
-    &__grid {
-          grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    grid-gap: 50px;
-    display: grid;
-    }
+.job__footer {
+  background-color: $color-white-text;
+}
+
+.benefits {
+  padding: 95px 0 110px;
+  background: $color__background-body;
+  h2 {
+    margin-bottom: 60px;
   }
-  .benefit {
-    position: relative;
-    display: flex;
-    span{
-      padding-left: 70px;
+  &__grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-gap: 40px;
+    display: grid;
+    padding: 26px 0 0 7px;
+  }
+}
+
+.benefit {
+  position: relative;
+  padding-left: 70px;
+  span {
     font-size: 1.0625rem;
     line-height: 25px;
-    }
-    svg {
-          position: absolute;
+    letter-spacing: 0.2px;
+  }
+  svg {
+    position: absolute;
     top: 50%;
     left: 8%;
     transform: translate(-50%, -50%);
     max-width: 60px;
     max-height: 50px;
-    }
-    
+  }
+}
 
+.apply-form {
+  padding: 108px 0;
+  &__item {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    display: flex;
+  }
+  br {
+    display: none;
+  }
+  i {
+    padding-left: 5px;
+    color: $color-text-title;
+  }
+  &__data-field {
+    position: relative;
+    flex-basis: 30%;
+    max-width: 30%;
+
+    label {
+      position: absolute;
+      top: -6px;
+      left: 0;
+      transition: all 0.3s ease-in-out;
+      font-size: 1.0625rem;
+      line-height: 25px;
+      pointer-events: none;
+      &.focus {
+        top: -20px;
+        transition: all 0.3s ease-in-out;
+        font-size: 0.625rem;
+        color: $color-input-search-border;
+      }
+    }
+    input {
+      transition: all 0.3s ease-in-out;
+      width: 100%;
+      background: none;
+      border: none;
+      border-bottom: 1px solid $color-input-search-border;
+      &.wpcf7-not-valid {
+        transition: all 0.3s ease-in-out;
+        border-color: $color-text-title;
+      }
+      &:focus {
+        transition: all 0.3s ease-in-out;
+        border-color: $color-text-title;
+      }
+    }
+
+    &:nth-child(4) {
+         flex-basis: 100%;
+    margin: 45px 0 40px;
+    max-width: 100%
+      input {
+        width: 100%;
+      }
+    }
+  }
+  &__attach {
+    flex-basis: 100%;
+    justify-content: space-between;
+    display: flex;
+    margin-bottom: 38px;
+    max-width: 100%;
+    &-field {
+      flex-basis: 48%;
+      font-size: 1.0625rem;
+      line-height: 25px;
+      label {
+        &:nth-child(1) {
+
+          margin-right: 24px;
+        }
+      }
+      input[type="file"] {
+        display: none;
+      }
+    }
+    &-link {
+      &,
+      label {
+        transition: all 0.3s ease-in-out;
+        margin-right: 6.5px;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-size: 0.75rem;
+        line-height: 16px;
+        letter-spacing: 0.8px;
+        color: $color-text-title;
+        &:hover {
+          transition: all 0.3s ease-in-out;
+          color: $color-input-search-border;
+        }
+      }
+    }
+  }
+  &__checkboxes {
+    margin-bottom: 20px;
+
+  
+  }
+  &__checkbox-field {
+    position: relative;
+    display: block;
+    padding-left: 30px;
+    font-size: 0.875rem;
+    line-height: 19px;
+    color: $color-text-email-input;
+    cursor: pointer;
+    input {
+      cursor: pointer;
+      height: 0;
+      width: 0;
+      &:checked:after {
+        transition: all 0.3s ease-in-out;
+        background-color: $color-text-title;
+
+        background-image: url(assets/image/-e-checkmark.svg);
+      }
+      &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: all 0.3s ease-in-out;
+        width: 17px;
+        height: 17px;
+        border: 1px solid $color-text-title;
+        border-radius: 30%;
+        background-size: 11px 10px;
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+    }
+  .apply-form__attach-link {
+         margin: 0;
+    font-size: 0.875rem;
+    letter-spacing: 0;
+    text-transform: none;
+    }
+
+    &:first-of-type {
+      margin-bottom: 20px;
+    }
+  }
+  input[type="submit"] {
+    transition: all 0.3s ease-in-out;
+    border: 1px solid $color-text-title;
+    border-radius: 28px;
+    padding: 0 28px 0 24px;
+    background-color: $color-text-title;
+    font-size: 1.0625rem;
+    line-height: 50px;
+    font-weight: 300;
+    white-space: nowrap;
+    color: $color-white-text;
+    &:hover {
+      border-color: $contact-us-btn-border;
+      background-color: transparent;
+      color: $color-text-title;
+    }
   }
 
+  .wpcf7 form {
+    position:relative;
+  }
+
+  .wpcf7 .wpcf7-response-output {
+       position: absolute;
+    left: 25%;
+    bottom: 5%;
+    margin: 0;
+    padding: 0;
+    font-size: 0.9375rem;
+    line-height: 23px;
+  
+  }
+
+  .wpcf7 form.sent .wpcf7-response-output {
+    border:none;
+  color: #46b450; /* Green */
+  &:before {
+           content: "";
+    position: absolute;
+    top: 15%;
+    left: -5%;
+    transition: all 0.3s ease-in-out;
+    width: 15px;
+    height: 15px;
+    background-image: url(assets/image/-e-checkmark.svg);
+    background-size: 11px 10px;
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: invert(.1) contrast(0.5) saturate(0.8) sepia(.6);
+}
+
+
+}
+
+.wpcf7 form.failed .wpcf7-response-output,
+.wpcf7 form.aborted .wpcf7-response-output {
+  border:none;
+	color: #dc3232; /* Red */
+}
+
+.wpcf7 form.spam .wpcf7-response-output {
+  border:none;
+	color: #f56e28; /* Orange */
+}
+
+.wpcf7 form.invalid .wpcf7-response-output,
+.wpcf7 form.unaccepted .wpcf7-response-output,
+.wpcf7 form.payment-required .wpcf7-response-output {
+  border:none;
+	color: #ffb900; /* Yellow */
+}
+
+}
+
+.socials {
+ 
+  padding: 90px 0;
+   background: $color__background-body;
+   &__content{
+ flex-direction: row;
+ align-items:center;
+  display: flex;
+    .socials__title {
+    margin: 0 20px 0 0;
+
+  }
+  .socials__icons {
+  flex-direction: row;
+    display: flex;
+  }
+  .socials__icon {
+  
+    svg {
+      max-width: 39px;
+      max-height: 39px;
+    }
+  }
+   }
+
+}
 @media only screen and (max-width: 1024px) {
   .filter__item-tags:not(.filter__item-location-tags) {
     -ms-flex-wrap: nowrap;
