--- a/style.css
+++ b/style.css
@@ -2489,11 +2489,34 @@ main {
 }
 
 .job__title {
+	margin: 0 0 15px 0;
+	font-size: 2.1875rem;
+	font-weight: 300;
+	line-height: 45px;
+	letter-spacing: -0.5px;
+}
+
+.job__title--head {
 	margin: 0 0 23px 0;
 	font-size: 3.75rem;
 	font-weight: 300;
 	line-height: 4rem;
 	letter-spacing: -1.3px;
+}
+
+.job__title--form {
+	margin: 0 0 62px 0;
+	font-size: 2.8125rem;
+	font-weight: 300;
+	line-height: 55px;
+	letter-spacing: -1px;
+}
+
+.job__title--socials {
+	font-size: 2.1875rem;
+	font-weight: 300;
+	line-height: 45px;
+	letter-spacing: -1px;
 }
 
 .job__short-description {
@@ -2586,7 +2609,7 @@ main {
 }
 
 .job__content {
-	padding-top: 120px;
+	padding: 120px 0 105px;
 	background-color: #fff;
 }
 
@@ -2598,20 +2621,12 @@ main {
 	letter-spacing: 0.2px;
 }
 
-.job__title {
-	margin: 0 0 16px 0;
-	font-size: 2.1875rem;
-	font-weight: 300;
-	line-height: 45px;
-	letter-spacing: -0.5px;
-}
-
 .job__advantages {
 	margin-bottom: 35px;
 }
 
 .job__advantages:last-of-type {
-	margin-bottom: 110px;
+	margin: 0;
 }
 
 .job__advantage {
@@ -2619,7 +2634,7 @@ main {
 	margin-left: 20px;
 	font-size: 1.0625rem;
 	line-height: 25px;
-	letter-spacing: .2px;
+	letter-spacing: 0.2px;
 }
 
 .job__advantage:before {
@@ -2635,8 +2650,12 @@ main {
 	height: 7px;
 }
 
+.job__footer {
+	background-color: #fff;
+}
+
 .benefits {
-	padding: 100px 0 110px;
+	padding: 95px 0 110px;
 	background: #f4f4f1;
 }
 
@@ -2646,20 +2665,21 @@ main {
 
 .benefits__grid {
 	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(1, 1fr);
-	grid-gap: 50px;
+	grid-template-rows: 1fr;
+	grid-gap: 40px;
 	display: grid;
+	padding: 26px 0 0 7px;
 }
 
 .benefit {
 	position: relative;
-	display: flex;
+	padding-left: 70px;
 }
 
 .benefit span {
-	padding-left: 70px;
 	font-size: 1.0625rem;
 	line-height: 25px;
+	letter-spacing: 0.2px;
 }
 
 .benefit svg {
@@ -2669,6 +2689,266 @@ main {
 	transform: translate(-50%, -50%);
 	max-width: 60px;
 	max-height: 50px;
+}
+
+.apply-form {
+	padding: 108px 0;
+}
+
+.apply-form__item {
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	display: flex;
+}
+
+.apply-form br {
+	display: none;
+}
+
+.apply-form i {
+	padding-left: 5px;
+	color: #bc204b;
+}
+
+.apply-form__data-field {
+	position: relative;
+	flex-basis: 30%;
+	max-width: 30%;
+}
+
+.apply-form__data-field label {
+	position: absolute;
+	top: -6px;
+	left: 0;
+	transition: all 0.3s ease-in-out;
+	font-size: 1.0625rem;
+	line-height: 25px;
+	pointer-events: none;
+}
+
+.apply-form__data-field label.focus {
+	top: -20px;
+	transition: all 0.3s ease-in-out;
+	font-size: 0.625rem;
+	color: #e1e1de;
+}
+
+.apply-form__data-field input {
+	transition: all 0.3s ease-in-out;
+	width: 100%;
+	background: none;
+	border: none;
+	border-bottom: 1px solid #e1e1de;
+}
+
+.apply-form__data-field input.wpcf7-not-valid {
+	transition: all 0.3s ease-in-out;
+	border-color: #bc204b;
+}
+
+.apply-form__data-field input:focus {
+	transition: all 0.3s ease-in-out;
+	border-color: #bc204b;
+}
+
+.apply-form__data-field:nth-child(4) {
+	flex-basis: 100%;
+	margin: 45px 0 40px;
+	max-width: 100% input;
+	max-width-width: 100%;
+}
+
+.apply-form__attach {
+	flex-basis: 100%;
+	justify-content: space-between;
+	display: flex;
+	margin-bottom: 38px;
+	max-width: 100%;
+}
+
+.apply-form__attach-field {
+	flex-basis: 48%;
+	font-size: 1.0625rem;
+	line-height: 25px;
+}
+
+.apply-form__attach-field label:nth-child(1) {
+	margin-right: 24px;
+}
+
+.apply-form__attach-field input[type="file"] {
+	display: none;
+}
+
+.apply-form__attach-link,
+.apply-form__attach-link label {
+	transition: all 0.3s ease-in-out;
+	margin-right: 6.5px;
+	cursor: pointer;
+	text-transform: uppercase;
+	font-size: 0.75rem;
+	line-height: 16px;
+	letter-spacing: 0.8px;
+	color: #bc204b;
+}
+
+.apply-form__attach-link:hover,
+.apply-form__attach-link label:hover {
+	transition: all 0.3s ease-in-out;
+	color: #e1e1de;
+}
+
+.apply-form__checkboxes {
+	margin-bottom: 20px;
+}
+
+.apply-form__checkbox-field {
+	position: relative;
+	display: block;
+	padding-left: 30px;
+	font-size: 0.875rem;
+	line-height: 19px;
+	color: #83807e;
+	cursor: pointer;
+}
+
+.apply-form__checkbox-field input {
+	cursor: pointer;
+	height: 0;
+	width: 0;
+}
+
+.apply-form__checkbox-field input:checked:after {
+	transition: all 0.3s ease-in-out;
+	background-color: #bc204b;
+	background-image: url(assets/image/-e-checkmark.svg);
+}
+
+.apply-form__checkbox-field input:after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: all 0.3s ease-in-out;
+	width: 17px;
+	height: 17px;
+	border: 1px solid #bc204b;
+	border-radius: 30%;
+	background-size: 11px 10px;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.apply-form__checkbox-field .apply-form__attach-link {
+	margin: 0;
+	font-size: 0.875rem;
+	letter-spacing: 0;
+	text-transform: none;
+}
+
+.apply-form__checkbox-field:first-of-type {
+	margin-bottom: 20px;
+}
+
+.apply-form input[type="submit"] {
+	transition: all 0.3s ease-in-out;
+	border: 1px solid #bc204b;
+	border-radius: 28px;
+	padding: 0 28px 0 24px;
+	background-color: #bc204b;
+	font-size: 1.0625rem;
+	line-height: 50px;
+	font-weight: 300;
+	white-space: nowrap;
+	color: #fff;
+}
+
+.apply-form input[type="submit"]:hover {
+	border-color: #df97ab;
+	background-color: transparent;
+	color: #bc204b;
+}
+
+.apply-form .wpcf7 form {
+	position: relative;
+}
+
+.apply-form .wpcf7 .wpcf7-response-output {
+	position: absolute;
+	left: 25%;
+	bottom: 5%;
+	margin: 0;
+	padding: 0;
+	font-size: 0.9375rem;
+	line-height: 23px;
+}
+
+.apply-form .wpcf7 form.sent .wpcf7-response-output {
+	border: none;
+	color: #46b450;
+	/* Green */
+}
+
+.apply-form .wpcf7 form.sent .wpcf7-response-output:before {
+	content: "";
+	position: absolute;
+	top: 15%;
+	left: -5%;
+	transition: all 0.3s ease-in-out;
+	width: 15px;
+	height: 15px;
+	background-image: url(assets/image/-e-checkmark.svg);
+	background-size: 11px 10px;
+	background-repeat: no-repeat;
+	background-position: center;
+	filter: invert(0.1) contrast(0.5) saturate(0.8) sepia(0.6);
+}
+
+.apply-form .wpcf7 form.failed .wpcf7-response-output,
+.apply-form .wpcf7 form.aborted .wpcf7-response-output {
+	border: none;
+	color: #dc3232;
+	/* Red */
+}
+
+.apply-form .wpcf7 form.spam .wpcf7-response-output {
+	border: none;
+	color: #f56e28;
+	/* Orange */
+}
+
+.apply-form .wpcf7 form.invalid .wpcf7-response-output,
+.apply-form .wpcf7 form.unaccepted .wpcf7-response-output,
+.apply-form .wpcf7 form.payment-required .wpcf7-response-output {
+	border: none;
+	color: #ffb900;
+	/* Yellow */
+}
+
+.socials {
+	padding: 90px 0;
+	background: #f4f4f1;
+}
+
+.socials__content {
+	flex-direction: row;
+	align-items: center;
+	display: flex;
+}
+
+.socials__content .socials__title {
+	margin: 0 20px 0 0;
+}
+
+.socials__content .socials__icons {
+	flex-direction: row;
+	display: flex;
+}
+
+.socials__content .socials__icon svg {
+	max-width: 39px;
+	max-height: 39px;
 }
 
 @media only screen and (max-width: 1024px) {
