--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -1260,7 +1260,7 @@ main {
       flex-basis: 100%;
       margin: 45px 0 40px;
       max-width: 100%;
-       input {
+      input {
         width: 100%;
       }
     }
@@ -1438,15 +1438,15 @@ main {
     .socials__icon {
       transition: all 0.3s ease-in-out;
       margin-right: 5px;
-      cursor:pointer;
+      cursor: pointer;
       &--custom {
-         max-width: 39px;
+        max-width: 39px;
         max-height: 39px;
-        
+
         img {
           width: 100%;
           height: auto;
-          border-radius:50%;
+          border-radius: 50%;
         }
       }
       svg {
@@ -1457,8 +1457,7 @@ main {
       &:hover {
         transition: all 0.3s ease-in-out;
         opacity: 0.7;
-      };
-
+      }
     }
   }
   &:after {
@@ -1489,6 +1488,67 @@ main {
   .filter__posts .filter__items {
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
+  }
+
+  .job__short-description {
+    max-width: 100%;
+    br {
+      display: none;
+    }
+  }
+
+  .job__header-menu {
+    flex-direction: column;
+    & > *:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  .job__locations {
+    justify-content: center;
+    margin-left: 0;
+    width: 100%;
+  }
+
+  .job__company-logo {
+    margin-left: 0;
+  }
+
+  .job__header {
+    padding-bottom: 65px;
+  }
+  .job__secondary-description {
+    max-width: 100%;
+  }
+  .job__content {
+    padding: 80px 0 85px;
+  }
+
+  .benefit svg {
+    left: -20%;
+    transform: translate(-50%, -50%) scale(2);
+    max-width: 50px;
+    max-height: 100%;
+    height: 50px;
+  }
+
+  .benefit {
+    justify-self: flex-end;
+    max-width: 75%;
+    padding-left: 0;
+  }
+
+  .apply-form__item {
+    flex-direction: column;
+  }
+
+  .apply-form__data-field {
+    max-width: 100%;
+    flex-basis: 100%;
+    margin-bottom: 30px;
+  }
+
+  .apply-form__data-field:nth-child(4) {
+    margin-top: 0;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -1550,6 +1610,40 @@ main {
     flex-basis: 20%;
     display: block;
   }
+
+  .main-container--job {
+    width: 90%;
+  }
+
+  .benefit {
+    max-width: 75%;
+    padding-right: 15%;
+  }
+
+  .benefit svg {
+    transform: translate(-50%, -50%) scale(1.5);
+  }
+
+  .apply-form__attach {
+    flex-direction: column;
+  }
+
+  .apply-form__attach-field {
+    &:nth-child(1) {
+      margin-bottom: 30px;
+    }
+  }
+
+  .socials__content {
+    flex-direction: column;
+    .socials__title {
+      margin-bottom: 20px;
+    }
+  }
+
+  .footer-menus {
+    margin-bottom: 20px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -1561,10 +1655,17 @@ main {
   .filter__posts .filter__tag-layout-mode {
     display: none;
   }
+
+  .benefits__grid {
+    grid-template-columns: 1fr;
+  }
+  .benefit svg {
+    transform: translate(-50%, -50%) scale(2);
+  }
 }
 @media only screen and (max-width: 480px) {
   .header .custom-logo {
-    max-width: 120px;
+    max-width: 100px;
   }
   .dropdown__wrapper--double :nth-child(1).dropdown__items {
     margin-right: 10px;
@@ -1580,4 +1681,7 @@ main {
   .dropdown__wrapper--double .dropdown__items {
     min-width: auto;
   }
+
+  .job__title--socials {
+    font-size: 1.5rem;}
 }
