--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -1233,12 +1233,6 @@ main {
       font-size: 1.0625rem;
       line-height: 25px;
       pointer-events: none;
-      &.focus {
-        top: -20px;
-        transition: all 0.3s ease-in-out;
-        font-size: 0.625rem;
-        color: $color-input-search-border;
-      }
     }
     input {
       transition: all 0.3s ease-in-out;
@@ -1253,6 +1247,15 @@ main {
       &:focus {
         transition: all 0.3s ease-in-out;
         border-color: $color-text-title;
+      }
+    }
+
+    &:focus-within {
+      label {
+        top: -20px;
+        transition: all 0.3s ease-in-out;
+        font-size: 0.625rem;
+        color: $color-input-search-border;
       }
     }
 
