Post list to mobile fixed

--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -1075,15 +1075,18 @@ main {
   }
 }
 
+@media only screen and (max-width: 767px) {
+  .filter__posts .filter__tag-layout-mode {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .filter__posts .filter__items {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 
-  .filter__posts .filter__tag-layout-mode {
-    display: none;
-  }
 }
 @media only screen and (max-width: 480px) {
   .header .custom-logo {
