--- a/style.css
+++ b/style.css
@@ -3065,6 +3065,19 @@ main {
 		max-height: 100%;
 		height: 50px;
 	}
+	.benefit__img img {
+		position: absolute;
+		top: 50%;
+		left: -20%;
+		transform: translate(-50%, -50%);
+		display: inline-block;
+		width: 100%;
+		height: auto;
+		max-width: 75px;
+	}
+	.benefit__img span {
+		max-width: 100%;
+	}
 	.benefit {
 		justify-self: flex-end;
 		max-width: 75%;
@@ -3144,6 +3157,9 @@ main {
 		max-width: 75%;
 		padding-right: 15%;
 	}
+	.benefit__img {
+		padding: 0;
+	}
 	.benefit svg {
 		transform: translate(-50%, -50%) scale(1.5);
 	}
@@ -3195,6 +3211,10 @@ main {
 	}
 	.dropdown__wrapper--double .dropdown__items {
 		min-width: auto;
+	}
+	.benefits__grid {
+		grid-template-columns: repeat(2, 1fr);
+		padding: 26px 0 0 15px;
 	}
 	.job__title--socials {
 		font-size: 1.5rem;
