Revert "fix theme garbage files"
This reverts commit 9fe638048db8247f798ae80ecf1f8818e0a021f7.

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,6 @@
+/* Typography
+--------------------------------------------- */
+@import "typography/typography";
 
 /* Elements
 --------------------------------------------- */
@@ -16,3 +19,4 @@
 /* Forms
 --------------------------------------------- */
 @import "elements/buttons";
+@import "elements/fields";
