--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -14,4 +14,8 @@ input[type="submit"] {
 		border-color: $color__border-button-hover;
 	}
 
+	// &:active,
+	// &:focus {
+	// 	border-color: $color__border-button-focus;
+	// }
 }
